fix outline visibility on focus

--- a/src/index.css
+++ b/src/index.css
@@ -151,7 +151,7 @@ body {
     touch-action: manipulation;
   }
   :focus-visible {
-    @apply ring-ring ring-offset-background ring-2 ring-offset-1 outline-none;
+    @apply ring-ring/50 ring-2 outline-none;
   }
 }
 
